Fix folder editor setting alignment to left column

--- a/src/folderview.plus/usr/local/emhttp/plugins/folderview.plus/styles/folder.css
+++ b/src/folderview.plus/usr/local/emhttp/plugins/folderview.plus/styles/folder.css
@@ -71,6 +71,22 @@
     background: rgba(255, 255, 255, 0.02);
 }
 
+/* Align setting rows with section headers instead of centered card width */
+.canvas form.folder-editor-form > .basic:not(.order-section),
+.canvas form.folder-editor-form > ul {
+    width: min(1100px, calc(100% - 2em));
+    margin-left: 1em !important;
+    margin-right: auto !important;
+    box-sizing: border-box;
+}
+
+.canvas form.folder-editor-form > ul > li > .basic,
+.canvas form.folder-editor-form > ul > li > ul > li > .basic {
+    width: 100%;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
 .fv-live-grid {
     display: grid;
     gap: 0.4em 1em;
